k8s/staging/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: staging-project-kubequest-backend-deployment
  namespace: staging-project-kubequest-backend
  labels:
    app: staging-project-kubequest-backend
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1 # Un nouveau pod en plus des existants max
      maxUnavailable: 0 # Aucun pod ne doit être indisponible pendant l'update (zero-downtime)
  progressDeadlineSeconds: 300 # Timeout max pour un déploiement (rollback si dépassé)
  revisionHistoryLimit: 5 # Garde les 5 dernières versions pour rollback
  selector:
    matchLabels:
      app: staging-project-kubequest-backend
  template:
    metadata:
      labels:
        app: staging-project-kubequest-backend
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution: # C’est une préférence, pas une obligation -> si ce n’est pas possible, le pod sera quand même programmé
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - staging-project-kubequest-backend
                topologyKey: kubernetes.io/hostname
      containers:
        - name: staging-project-kubequest-backend
          image: corentin35/project-kubequest-backend:staging-4c10507515bf11fe8fc194b9ded3295df75afd9a
          imagePullPolicy: Always
          ports:
            - containerPort: 3333
          resources:
            requests:
              cpu: '300m'
              memory: '400Mi'
            limits:
              cpu: '600m'
              memory: '800Mi'
          livenessProbe:
            httpGet:
              path: /
              port: 3333
            initialDelaySeconds: 10
            periodSeconds: 15
            timeoutSeconds: 2
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 3333
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
      imagePullSecrets:
        - name: regcred
